pielang/src/snapshots/pielang__test__parse_expression_'atom.snap
---
source: pielang/src/test.rs
description: "'atom"
expression: parser.parse(e)
---
Ok(
    AtomLit(
        Span(
            0,
            5,
        ),
        "atom",
    ),
)
