pielang/src/snapshots/pielang__test__parse_expression_'this-is-a-symbol.snap
---
source: pielang/src/test.rs
description: "'this-is-a-symbol"
expression: parser.parse(e)
---
Ok(
    AtomLit(
        Span(
            0,
            17,
        ),
        "this-is-a-symbol",
    ),
)
