pielang/src/snapshots/pielang__test__parse_expression_(cons 2 (same 2)).snap
---
source: pielang/src/test.rs
description: (cons 2 (same 2))
expression: parser.parse(e)
---
Ok(
    App(
        Span(
            0,
            17,
        ),
        [
            Ident(
                Span(
                    1,
                    5,
                ),
                "cons",
            ),
            NatLit(
                Span(
                    6,
                    7,
                ),
                2,
            ),
            App(
                Span(
                    8,
                    16,
                ),
                [
                    Ident(
                        Span(
                            9,
                            13,
                        ),
                        "same",
                    ),
                    NatLit(
                        Span(
                            14,
                            15,
                        ),
                        2,
                    ),
                ],
            ),
        ],
    ),
)
