pielang/src/snapshots/pielang__test__parse_expression_(quote 'a).snap
---
source: pielang/src/test.rs
description: "(quote 'a)"
expression: parser.parse(e)
---
Err(
    UnrecognizedToken {
        token: (
            7,
            Token(
                9,
                "'",
            ),
            8,
        ),
        expected: [
            "IDENT",
            "PI",
            "SIGMA",
            "LAMBDA",
            "\"quote\"",
        ],
    },
)
