pielang/src/snapshots/pielang__test__parse_expression_(quote this-is-a-symbol).snap
---
source: pielang/src/test.rs
description: (quote this-is-a-symbol)
expression: parser.parse(e)
---
Ok(
    AtomLit(
        Span(
            0,
            24,
        ),
        "this-is-a-symbol",
    ),
)
