pielang/src/snapshots/pielang__test__parse_expression_(the (Σ ((n Nat))         (= Nat n n))    (cons 2 (same 2))).snap
---
source: pielang/src/test.rs
description: "(the (Σ ((n Nat))\n         (= Nat n n))\n    (cons 2 (same 2)))"
expression: parser.parse(e)
---
Ok(
    App(
        Span(
            0,
            63,
        ),
        [
            Ident(
                Span(
                    1,
                    4,
                ),
                "the",
            ),
            SigmaExpr(
                Span(
                    5,
                    40,
                ),
                [
                    (
                        Ident(
                            Span(
                                11,
                                12,
                            ),
                            "n",
                        ),
                        Ident(
                            Span(
                                13,
                                16,
                            ),
                            "Nat",
                        ),
                    ),
                ],
                App(
                    Span(
                        28,
                        39,
                    ),
                    [
                        Ident(
                            Span(
                                29,
                                30,
                            ),
                            "=",
                        ),
                        Ident(
                            Span(
                                31,
                                34,
                            ),
                            "Nat",
                        ),
                        Ident(
                            Span(
                                35,
                                36,
                            ),
                            "n",
                        ),
                        Ident(
                            Span(
                                37,
                                38,
                            ),
                            "n",
                        ),
                    ],
                ),
            ),
            App(
                Span(
                    45,
                    62,
                ),
                [
                    Ident(
                        Span(
                            46,
                            50,
                        ),
                        "cons",
                    ),
                    NatLit(
                        Span(
                            51,
                            52,
                        ),
                        2,
                    ),
                    App(
                        Span(
                            53,
                            61,
                        ),
                        [
                            Ident(
                                Span(
                                    54,
                                    58,
                                ),
                                "same",
                            ),
                            NatLit(
                                Span(
                                    59,
                                    60,
                                ),
                                2,
                            ),
                        ],
                    ),
                ],
            ),
        ],
    ),
)
