pielang/src/snapshots/pielang__test__parse_expression_(the(List Nat)nil).snap
---
source: pielang/src/test.rs
description: (the(List Nat)nil)
expression: parser.parse(e)
---
Ok(
    AppExpr(
        Span(
            0,
            18,
        ),
        [
            Ident(
                Span(
                    1,
                    4,
                ),
                "the",
            ),
            AppExpr(
                Span(
                    4,
                    14,
                ),
                [
                    Ident(
                        Span(
                            5,
                            9,
                        ),
                        "List",
                    ),
                    Ident(
                        Span(
                            10,
                            13,
                        ),
                        "Nat",
                    ),
                ],
            ),
            Ident(
                Span(
                    14,
                    17,
                ),
                "nil",
            ),
        ],
    ),
)
