pielang/src/snapshots/pielang__test__parse_expression_(λ (x) (add1 x)).snap
---
source: pielang/src/test.rs
description: (λ (x) (add1 x))
expression: parser.parse(e)
---
Ok(
    LambdaExpr(
        Span(
            0,
            17,
        ),
        [
            Ident(
                Span(
                    5,
                    6,
                ),
                "x",
            ),
        ],
        App(
            Span(
                8,
                16,
            ),
            [
                Ident(
                    Span(
                        9,
                        13,
                    ),
                    "add1",
                ),
                Ident(
                    Span(
                        14,
                        15,
                    ),
                    "x",
                ),
            ],
        ),
    ),
)
