pielang/src/snapshots/pielang__test__parse_expression_0.snap
---
source: src/test.rs
description: "0"
expression: parser.parse(e)
---
Ok(
    Literal(
        Span(
            0,
            1,
        ),
        Nat(
            0,
        ),
    ),
)
